terraform-ecs-fargate/ecs-fargate-alb-public/tg.tf
resource "aws_lb_target_group" "TG" {
  name        = "my-TG"
  port        = "80"
  protocol    = "HTTP"
  target_type = "ip"
  vpc_id      = aws_vpc.vpc.id

  tags = {
    Name = "my-TG"
  }
}
